--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-prettify": "^0.1.1",
     "express-session": "^1.15.6",
     "mongoose": "^5.4.9",
     "nodemon": "^1.18.9",
